style: fixed issue where a horizontal scrollbar appeared when screen was small
the scrollbar served no function

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -18,6 +18,7 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  overflow-x: hidden;
 }
 
 .noblink {
